<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16"
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@mipmap/ic_login_logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="商户登录"
            android:textColor="@color/menu_grey"
            android:textSize="@dimen/font_24"
            />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edittext_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/label_account"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:singleLine="true"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@mipmap/ic_login_user"
            app:met_iconPadding="0dp"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edittext_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_psd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@mipmap/ic_login_key"
            app:met_iconPadding="0dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <CheckBox
                android:id="@+id/checkBox_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="记住密码"
                android:textColor="@color/menu_grey"
                />

            <Button
                android:id="@+id/btn_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:text="忘记密码"
                android:textColor="@color/colorPrimary"
                />

        </RelativeLayout>


        <com.dd.CircularProgressButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_22"
            app:cpb_colorIndicator="@color/colorPrimary"
            app:cpb_colorIndicatorBackground="@android:color/white"
            app:cpb_paddingProgress="4dp"
            app:cpb_selectorIdle="@drawable/btn_circular_idle_selector"
            app:cpb_textIdle="@string/login"
            />

    </LinearLayout>

</RelativeLayout>
