<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/fragment_bg"
        android:orientation="horizontal"
        android:padding="6dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/imgbtn_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_img_selector"
                android:padding="8dp"
                android:src="@mipmap/ic_calender_last"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/font_18"
            />

        <ImageButton
            android:id="@+id/imgbtn_calender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_img_selector"
            android:padding="8dp"
            android:src="@mipmap/ic_calender"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/imgbtn_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_img_selector"
                android:padding="8dp"
                android:src="@mipmap/ic_calender_next"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_cards_num"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/checked_num"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16"
                />

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16"
                tools:text="0"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_money"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/checked_money"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16"
                />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_16"
                tools:text="0.00元"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/checked_bg"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/owner"
            android:textSize="@dimen/font_16"
            />

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <Spinner
                android:id="@+id/spinner_pay_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/checked_cards"
                android:textSize="@dimen/font_16"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_friend"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friend"
            android:textSize="@dimen/font_16"
            />


        <TextView
            android:id="@+id/tv_time"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/checked_time"
            android:textSize="@dimen/font_16"
            />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ListView
            android:id="@+id/lst_checked_records"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            />

        <include layout="@layout/layout_loading" />

        <include layout="@layout/layout_nodata"/>
    </FrameLayout>


</LinearLayout>